# bp_app/openapi.yaml
@@ -41,7 +41,7 @@ paths:
             schema:
               $ref: '#/components/schemas/Record'
       responses:
-        200:
+        201:
           description: Record created
         400:
           description: Bad Request
@@ -65,6 +65,8 @@ paths:
             text/html: {}
         400:
           description: Bad Request
+        404:
+          description: No Record found
     delete:
       summary: Delete record based on id
       parameters:
@@ -77,8 +79,12 @@ paths:
             format: int64
             minimum: 1
       responses:
-        200:
+        202:
           description: Record deleted
+          content:
+            text/html: {}
+        204:
+          description: No Record found
           content:
             text/html: {}
         400:
@@ -104,6 +110,10 @@ paths:
       responses:
         200:
           description: Record updated
+          content:
+            text/html: {}
+        201:
+          description: No record found, new one created with id X
           content:
             text/html: {}
         400:
